--- a/reg.html
+++ b/reg.html
@@ -4,7 +4,7 @@ And []-Square Brackets Means Should Not Match The Inside Characters
 ^HiHello Should Start With HiHello Only Caret>
 <html>
 <head>
-<title>new Registration Form</title>
+<title>New Registration Form</title>
 <style>
 body{
 font-family: Arial,sans-serif;
@@ -77,7 +77,7 @@ margin-top:15px;
 <body>
 <div class="form-container">
 <form id="regForm">
-<h1>Event Registration</h1>
+<h1>New Event Registration</h1>
 <div class="input-box">
 <label for="firstName">First Name</label>
 <input type="text" id="firstName" name="firstName" required>
